feat: paginering en sortering toegevoegd aan tickets